test/modules/cassella/ambigmodmain.unnested2.good
<command line>: error: unknown main module due to multiple 'main' procedures
<command line>: note: please use '--main-module' to disambiguate
ambigmodmain.unnested2.chpl:3: note: found 'proc main' in module 'M'
ambigmodmain.unnested2.chpl:8: note: found 'proc main' in module 'M'
