test/modules/cassella/ambigmodmain.unnested2.chpl
module X {
  module M {
    proc main() { writeln("X.M"); }
  }
}

module M {
  proc main() { writeln("M"); }
}
